tdf#105266 Make LIGHTEN and DARKEN follow MS specification

Enhanced geometry of custom shapes has got commands for LIGHTEN and
DARKEN of subpaths. MS specifies, that LIGHTEN is a blending with
white and DARKEN is a blending with black. This patch adapts the
calcuation accordingly.

Change-Id: Ie46f1a1a2210c209c3fac34a7a58758b72eb276c
Reviewed-on: https://gerrit.libreoffice.org/33337
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: jan iversen <jani@documentfoundation.org>